--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ requests==2.31.0
 Pillow==10.0.1
 reportlab==4.0.4
 PyPDF2==3.0.1
-flask==2.3.3
-werkzeug==2.3.7
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+python-multipart==0.0.6
