--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,13 @@ fonts
 logs
 output
 venv
+
+.idea
+.vscode
+.DS_Store
+.env
+.env.local
+.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
